
option (USE_IPA_IO "Use IO - IPA Library" ON)
option (USE_IPA_MAP "Use Map - IPA Library" ON)
option (USE_IPA_MATH "Use Math - IPA Library" ON)
option (USE_IPA_OBJECT "Use Object - IPA Library" ON)
option (USE_IPA_PTR "Use Ptr - IPA Library" ON)
option (USE_IPA_RANDOM "Use Random - IPA Library" ON)
option (USE_IPA_TIME "Use Time - IPA Library" ON)
option (USE_IPA_ASM "Use Time - IPA Assembler" ON)

if (USE_IPA_IO)
	add_subdirectory ("IO")
	set (IPA_SELECTED_DIRS ${IPA_SELECTED_DIRS} " IO")
endif (USE_IPA_IO)
if (USE_IPA_MAP)
	add_subdirectory ("Map")
	set (IPA_SELECTED_DIRS ${IPA_SELECTED_DIRS} " Map")
endif (USE_IPA_MAP)
if (USE_IPA_MATH)
	add_subdirectory ("Math")
	set (IPA_SELECTED_DIRS ${IPA_SELECTED_DIRS} " Math")
endif (USE_IPA_MATH)
if (USE_IPA_OBJECT)
	add_subdirectory ("Object")
	set (IPA_SELECTED_DIRS ${IPA_SELECTED_DIRS} " Object")
endif (USE_IPA_OBJECT)
if (USE_IPA_PTR)
	add_subdirectory ("Ptr")
	set (IPA_SELECTED_DIRS ${IPA_SELECTED_DIRS} " Ptr")
endif (USE_IPA_PTR)
if (USE_IPA_RANDOM)
	add_subdirectory ("Random")
	set (IPA_SELECTED_DIRS ${IPA_SELECTED_DIRS} " Random")
endif (USE_IPA_RANDOM)
if (USE_IPA_TIME)
	add_subdirectory ("Time")
	set (IPA_SELECTED_DIRS ${IPA_SELECTED_DIRS} " Time")
endif (USE_IPA_TIME)
if (USE_IPA_ASM)
	add_subdirectory ("Asm")
	set (IPA_SELECTED_DIRS ${IPA_SELECTED_DIRS} " Asm")
endif (USE_IPA_ASM)

message(STATUS "Selected IPA libraries: ${IPA_SELECTED_DIRS}")
